# llm-gateway-client

./: .gitignore  Dockerfile.dev  LICENSE  README.md  pyproject.toml
docs/: Models-access-guideline.md
src/llm_gateway_client/: __init__.py  llm.py  llm_models.json  llmabc.py  llms.py  session.py
test/: test_anthropic_chat.py  test_codegen_completion.py  test_codellama_completion.py  test_codellama_infilling.py  test_codellama_instruct.py  test_llama_completion.py  test_mistral_completion.py  test_mistral_instruct.py  test_mixtral_instruct.py  test_openai_chat.py  test_starcoder_completion.py  test_starcoder_infilling.py  test_yi_chat.py
