[project]
name = "llm-gateway-client"
version = "0.1.0"
description = "The client for LLM Gateway"
authors = [
    { name = "syne-lab", email = "noreply@example.com" }
]
dependencies = [
    "requests>=2.32.2",
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_gateway_client"]
